* Fri Dec 16 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
- Updated for Puppet 4
- Renamed the `logrotate::add` defined type to `logrotate::rule`

* Fri Nov 18 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.0-0
- Updated to compliance_markup version 2

* Tue Feb 23 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 4.1.0-4
- Added compliance function support

* Tue Jan 26 2016 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.0-3
- Normalized common static module assets

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-2
- Changed puppet-server requirement to puppet

* Mon Aug 25 2014 Kendall Moore <kmoore@keywcorp.com> - 4.1.0-1
- The upgrade to ruby 2.0 caused empty includes with arrays of length 0.

* Sun Mar 02 2014 Kendall Moore <kmoore@keywcorp.com> - 4.1.0-0
- Refactored to pass all lint tests and be compatible with hiera and puppet 3.
- Added rspec tests for test coverage.

* Thu Feb 13 2014 Kendall Moore <kmoore@keywcorp.com> - 4.0.0-10
- Converted all string booleans into native booleans.

* Mon Oct 07 2013 Kendall Moore <kmoore@keywcorp.com> - 4.0.0-9
- Updated all erb templates to properly scope variables.

* Tue Jul 09 2013 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.0.0-8
- Fixed a typo whereby 'include' statements were not processed due to
  extraneous double quotes.
- Moved the tabooext option outside of the main option set since, according to
  the docs, it simply overwrites or appends to the previous value anyway.

* Thu Jan 24 2013 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.0.0-7
- Created a Cucumber test that ensures logrotate is working by creating a test log.

* Tue Oct 23 2012 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.0.0-6
- Changed the default configuration so that empty files no longer get rotated.

* Fri Aug 17 2012 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.0.0-5
- Added the dateext -%Y%m%d.%s so that logs can be rotated multiple times per day.