@@ -4,16 +4,58 @@ describe 'logrotate::rule' do
   context 'supported operating systems' do
     on_supported_os.each do |os, facts|
       context "on #{os}" do
-        let(:facts) { facts }
 
         let(:title) {'test_logrotate_title'}
+        let(:facts) { facts }
 
-        let(:params) {{
-          :log_files => ['test1.log', 'test2.log']
-        }}
+        context 'without a lastaction specified and lastaction_restart_logger = false' do
+          let(:params) {{
+            :log_files => ['test1.log', 'test2.log']
+          }}
+          it { is_expected.to compile.with_all_deps }
+          it { is_expected.to create_file('/etc/logrotate.d/test_logrotate_title').with_content(/test1\.log.*test2\.log/) }
+          it { is_expected.to_not create_file('/etc/logrotate.d/test_logrotate_title').with_content(/lastaction/) }
+        end
 
-        it { is_expected.to compile.with_all_deps }
-        it { is_expected.to create_file('/etc/logrotate.d/test_logrotate_title').with_content(/test1\.log.*test2\.log/) }
+        context 'without a lastaction specified and lastaction_restart_logger = true' do
+          let(:params) {{
+            :log_files                 => ['test1.log', 'test2.log'],
+            :lastaction_restart_logger => true
+          }}
+          it { is_expected.to compile.with_all_deps }
+          it { is_expected.to create_file('/etc/logrotate.d/test_logrotate_title').with_content(/test1\.log.*test2\.log/) }
+          if (['RedHat', 'CentOS'].include?(facts[:operatingsystem]))
+            if (facts[:operatingsystemmajrelease].to_s >= '7')
+              it { is_expected.to create_file('/etc/logrotate.d/test_logrotate_title').with_content(/lastaction\n.*\/usr\/bin\/systemctl restart rsyslog/) }
+            else
+              it { is_expected.to create_file('/etc/logrotate.d/test_logrotate_title').with_content(/lastaction\n.*\/sbin\/service rsyslog restart/) }
+            end
+          end
+        end
+
+        context 'with an alternate logger specified' do
+          let(:params) {{
+            :log_files                 => ['test1.log', 'test2.log'],
+            :lastaction_restart_logger => true
+          }}
+          let(:hieradata) { 'alternate_logger' }
+          if (['RedHat', 'CentOS'].include?(facts[:operatingsystem]))
+            if (facts[:operatingsystemmajrelease].to_s >= '7')
+              it { is_expected.to create_file('/etc/logrotate.d/test_logrotate_title').with_content(/lastaction\n.*\/usr\/bin\/systemctl restart syslog/) }
+            else
+              it { is_expected.to create_file('/etc/logrotate.d/test_logrotate_title').with_content(/lastaction\n.*\/sbin\/service syslog restart/) }
+            end
+          end
+        end
+
+        context 'with a lastaction specified' do
+          let(:params) {{
+            :log_files   => ['test1.log', 'test2.log'],
+            :lastaction  => 'this is a lastaction'
+          }}
+          it { is_expected.to compile.with_all_deps }
+          it { is_expected.to create_file('/etc/logrotate.d/test_logrotate_title').with_content(/lastaction\n.*this is a lastaction/) }
+        end
       end
     end
   end
