@@ -91,9 +91,9 @@
 <%= "\t\t#{@firstaction}" %>
     endscript
 <%  end -%>
-<%  if @lastaction -%>
+<%  if @_lastaction -%>
     lastaction
-<%= "\t\t#{@lastaction}" %>
+<%= "\t\t#{@_lastaction}" %>
     endscript
 <%  end -%>
     rotate <%= @rotate %>
